// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TraceLink renders trace page when transaction is not found 1`] = `
<Redirect
  push={false}
  to="/traces?kuery=trace.id%2520%253A%2520%2522123%2522"
/>
`;

exports[`TraceLink transaction page renders with date range params 1`] = `
<Redirect
  push={false}
  to="/services/foo/transactions/view?traceId=123&transactionId=456&transactionName=bar&transactionType=GET"
/>
`;

exports[`TraceLink transaction page renders without date range 1`] = `
<Redirect
  push={false}
  to="/services/foo/transactions/view?traceId=123&transactionId=456&transactionName=bar&transactionType=GET"
/>
`;
